--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ text-decoration: none;
 width: 100%;
 height: 1200px;
 top: 100px;
-background-image: url(./images/main.jpg);
+background-image:url("./images/main.jpg");
 background-size: cover;
  }
 
@@ -123,4 +123,5 @@ footer {
 footer i{
     margin: 0.3em 00;
 }
+
   
